[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suture"
version = "0.1.0"
description = "An enterprise-grade automated loop and skills framework for Multi-Agent Systems"
authors = [
    { name = "Interlabs" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
suture-mcp = "suture.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
